syntax = "proto3";

package simplercp;

option go_package = "github.com/eniac/mucache/pkg/pb";

service Simple {
    rpc SimpleRPC (SimpleRequest) returns (SimpleResponse);
}

message SimpleRequest {
    string endpoint = 1;
}

message SimpleResponse {
    string resp = 1;
}